# openapi-ts

./: .editorconfig  .eslintignore  .eslintrc.json  .gitattributes  .gitignore  .heyapi.json  .oxfmtrc.json  .oxlintrc.json  .prettierignore  .vercelignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  MIGRATION_SUMMARY.md  OXFMT_MIGRATION_RESEARCH.md  OXLINT_MIGRATION_RESEARCH.md  README.md  TYPESCRIPT_NATIVE_SUMMARY.md  commitlint.config.js  eslint.config.js  handlebars.ts  jest.config.ts  lint-staged.config.js  mise.toml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.js  pyproject.toml  renovate.json  rollup.config.mjs  rollup.config.ts  rollup.dts.config.ts  test-config-client-fetch.mjs  test-config-complex.mjs  test-config-no-transformer.mjs  (+14 more)
.changeset/: afraid-bears-relax.md  afraid-cherries-kneel.md  afraid-dragons-enter.md  afraid-eyes-greet.md  afraid-mangos-help.md  afraid-mangos-search.md  angry-actors-change.md  angry-chairs-explain.md  angry-crabs-count.md  angry-dingos-obey.md  angry-results-wonder.md  beige-buttons-invent.md  beige-games-deny.md  beige-impalas-collect.md  beige-keys-wonder.md  beige-rocks-remain.md  beige-taxis-hear.md  better-cameras-sip.md  better-spiders-relax.md  big-boats-grin.md  big-icons-sort.md  big-seals-count.md  big-seas-cut.md  big-streets-behave.md  big-trees-hide.md  bitter-clouds-cover.md  bitter-lines-hammer.md  bitter-suns-relax.md  bitter-wings-teach.md  blue-bikes-approve.md  blue-carrots-juggle.md  blue-chicken-allow.md  blue-loops-fix.md  (+1118 more)
(+1766 files in other folders)
