[project]
name = "hey-api-dev"
version = "0.0.0"
requires-python = ">=3.9"

[dependency-groups]
dev = ["httpx>=0.27", "mypy>=1.15", "ruff>=0.11"]

[tool.mypy]
python_version = "3.9"
strict = false
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.format]
exclude = ["**/__snapshots__/**"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
